--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,6 @@ actix-web = "^4"
 dotenv = "0.15"
 log = "^0.4"
 env_logger = "^0.9"
-chrono = "^0.4"
+chrono = { version = "^0.4", features = ["serde"] }
 serde = { version = "^1", features=["derive"] }
 diesel = { version = "^1.4", features = ["r2d2", "postgres", "chrono"]}
