--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
