--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
+    "framer-motion": "^7.2.1",
     "p5": "^1.4.1",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
