--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,5 +13,6 @@ env_logger = "^0.9"
 derive_more = "^0.99"
 r2d2 = "0.8.9"
 chrono = { version = "^0.4", features = ["serde"] }
-serde = { version = "^1", features=["derive"] }
-diesel = { version = "^1.4", features = ["r2d2", "postgres", "chrono"]}
+serde = { version = "^1", features = ["derive"] }
+diesel = { version = "2.0.0", features = ["r2d2", "postgres", "chrono"] }
+
