--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8080/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -13,7 +14,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "axios": "^0.27.2",
-    "framer-motion": "^7.2.1",
+    "date-fns": "^2.29.3",
     "p5": "^1.4.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
