--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "^4"
+actix-cors = "0.6.3"
 dotenv = "0.15"
 log = "^0.4"
 env_logger = "^0.9"
@@ -15,6 +16,7 @@ r2d2 = "0.8.9"
 chrono = { version = "^0.4", features = ["serde"] }
 serde = { version = "^1", features = ["derive"] }
 diesel = { version = "2.0.0", features = ["r2d2", "postgres", "chrono"] }
+diesel_migrations = "2.0.0"
 
 [dev-dependencies]
 lipsum = "0.8.2"
