--- a/deployment/frontend/Jenkinsfile
+++ b/deployment/frontend/Jenkinsfile
@@ -3,6 +3,7 @@ pipeline {
         docker {
             image 'node:19-alpine'
             args '-p 3000:3000'
+            args '-u root'
         }
     }
 
