Added frontend Jenkinsfile attempt 5

--- a/deployment/frontend/Jenkinsfile
+++ b/deployment/frontend/Jenkinsfile
@@ -8,16 +8,10 @@ pipeline {
     }
 
     stages {
-        stage('setup') {
-            steps {
-                dir('frontend') {
-                    sh 'npm install'
-                }
-            }
-        }
         stage('build') {
             steps {
                 dir('frontend') {
+                    sh 'npm run install'
                     sh 'npm start build'
                 }
             }
