--- a/deployment/frontend/Jenkinsfile
+++ b/deployment/frontend/Jenkinsfile
@@ -11,8 +11,9 @@ pipeline {
         stage('build') {
             steps {
                 dir('frontend') {
-                    sh 'npm run install'
-                    sh 'npm start build'
+                    sh 'corepack enable'
+                    sh 'yarn install'
+                    sh 'yarn build'
                 }
             }
         }
