Jenkins pipline atempt like 6 should be last one

--- a/deployment/frontend/Jenkinsfile
+++ b/deployment/frontend/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
                                 verbose: true,
                                 transfers: [
                                     sshTransfer(
-                                        sourceFiles: "build/*",
+                                        sourceFiles: "build/**/*",
                                         removePrefix: "build/",
                                         cleanRemote: true
                                     )
