Jenkinsfile backend attempt 3

--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
         stage('build') {
             steps {
                 dir('backend') {
+                    sh 'apt install postgresql-libs'
                     sh 'cargo build --release'
                 }
             }
