Jenkinsfile backend attempt 4

--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -19,7 +19,8 @@ pipeline {
         stage('build') {
             steps {
                 dir('backend') {
-                    sh 'apt install postgresql-libs'
+                    sh 'apt-get update'
+                    sh 'apt-get install postgresql-libs'
                     sh 'cargo build --release'
                 }
             }
