--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
             steps {
                 dir('backend') {
                     sh 'apt-get update'
-                    sh 'apt-get install postgresql-libs'
+                    sh 'apt-get install libpq-dev'
                     sh 'cargo build --release'
                 }
             }
