--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -23,3 +23,6 @@ lipsum = "0.8.2"
 rand = "0.8.5"
 serde_json = "1.0.85"
 actix-http = "3.2.2"
+
+[target.x86_64-unknown-linux-musl]
+linker = "x86_64-linux-gnu-gcc"
