--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -24,5 +24,8 @@ rand = "0.8.5"
 serde_json = "1.0.85"
 actix-http = "3.2.2"
 
+[build]
+target = "x86_64-unknown-linux-musl"
+
 [target.x86_64-unknown-linux-musl]
 linker = "x86_64-linux-gnu-gcc"
