--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
                     sh 'export CC_x86_64_unknown_linux_musl=x86_64-linux-gnu-gcc'
                     sh 'ls -a'
                     sh 'apt-get update'
-                    sh 'apt-get install -y libpq-dev build-essential gcc-x86-64-linux-gnu'
+                    sh 'apt-get install -y libpq-dev:amd64 build-essential gcc-x86-64-linux-gnu'
                     sh 'rustup target add x86_64-unknown-linux-musl'
                     sh 'cargo build --release --target=x86_64-unknown-linux-musl'
                 }
