--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -20,7 +20,7 @@ pipeline {
             steps {
                 dir('backend') {
                     sh 'export CC_x86_64_unknown_linux_musl=x86_64-linux-gnu-gcc'
-                    sh 'ls -a'
+                    sh 'dpkg --add-architecture amd64'
                     sh 'apt-get update'
                     sh 'apt-get install -y libpq-dev:amd64 build-essential gcc-x86-64-linux-gnu'
                     sh 'rustup target add x86_64-unknown-linux-musl'
