--- a/deployment/backend/Jenkinsfile
+++ b/deployment/backend/Jenkinsfile
@@ -25,6 +25,8 @@ pipeline {
                     sh 'apt-get install -y libpq-dev:amd64 build-essential gcc-x86-64-linux-gnu'
                     sh 'rustup target add x86_64-unknown-linux-gnu'
                     sh 'cargo build --release --target=x86_64-unknown-linux-gnu'
+                    sh 'ls target'
+                    sh 'ls target/release'
                 }
             }
         }
