Everything is working except db operations which I am about to fully rewrite

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=test
-DATABASE_URL=postgres://postgres:test@localhost:5432
+DATABASE_URL=postgres://postgres:test@localhost:5432/personalsite
 ADMIN_PASSWORD=test
 URL=kyledenief.me
