--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "backend"
-version = "0.6.1"
+version = "0.6.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -13,6 +13,7 @@ log = "^0.4"
 env_logger = "^0.9"
 derive_more = "^0.99"
 r2d2 = "0.8.9"
+validator = { version = "0.16", features = ["derive"] }
 chrono = { version = "^0.4", features = ["serde"] }
 serde = { version = "^1", features = ["derive"] }
 diesel = { version = "2.0.2", features = ["r2d2", "postgres", "chrono"] }
