--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,12 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
-    "@types/p5": "^1.4.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^3.1.0",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
-    "p5": "^1.4.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
@@ -23,17 +22,16 @@
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "react-use": "^17.4.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "vite": "^4.1.1",
+    "vite-plugin-svgr": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
