Finished adding configurablility to the frontend and removed deployment stuff

--- a/client/package.json
+++ b/client/package.json
@@ -50,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "vite-plugin-html": "^3.2.0"
   }
 }
