--- a/config/config_template.json
+++ b/config/config_template.json
@@ -57,7 +57,8 @@
             ]
         },
         "blogList": {
-            "description": ""
+            "description": "",
+            "contentPerPage": 8
         },
         "projectList": {
             "description": ""
