--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,10 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint src/**/*",
+    "lint:fix": "eslint --fix src/**/*",
+    "format": "prettier --write src/**/* --config ./.prettierrc"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +54,12 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "2.8.7",
     "vite-plugin-html": "^3.2.0"
   }
 }
