--- a/config/config.json
+++ b/config/config.json
@@ -52,8 +52,28 @@
       "mainParagraph": "As a first-year computer science student at Memorial University of Newfoundland, I am highly motivated to learn and excel in the field of technology. In addition to my coursework, I have self-taught myself a range of programming languages and technologies, including Python, TypeScript, SQL, Docker, Git, Rust, and Linux. I have also gained experience with popular web development frameworks such as React, Flask, and Actix Web. My passion for computers and technology has driven me to continually improve my skills and knowledge. I am proud to have had numerous academic achievements, including winning high school subject awards, being on the honor roll, and receiving a scholarship from the James R. Hoffa Memorial Scholarship Fund. Outside of my studies, I enjoy reading, sports, and fishing. I have played a variety of sports throughout my life, including hockey, baseball, and basketball. I am excited to see where my studies and self-learning will take me in the future.",
       "toRead": [
         {
-          "name": "The Pragmatic Programmer: Your Journey To Mastery",
-          "author": "Andrew Hunt & David Thomas"
+          "name": "Animal Farm",
+          "author": "George Orwell"
+        },
+        {
+          "name": "Lost and Founder",
+          "author": "Rand Fishkin"
+        },
+        {
+          "name": "Good Economics for Hard Times",
+          "author": "Abhijit Banerjee & Esther Duflo"
+        },
+        {
+          "name": "Zero to One",
+          "author": "Peter Thiel & Blake Masters"
+        },
+        {
+          "name": "Code",
+          "author": "Charles Petzold"
+        },
+        {
+          "name": "Metropolis",
+          "author": "Ben Wilson"
         },
         {
           "name": "How Not to Be Wrong",
@@ -68,11 +88,11 @@
           "author": "Pierce Brown"
         },
         {
-          "name": "Structures: Or Why Things Don't Fall Down",
+          "name": "Structures",
           "author": "J. E. Gordon"
         },
         {
-          "name": "Blackwater: The Rise of the World's Most Powerful Mercenary Army",
+          "name": "Blackwater",
           "author": "Jeremy Scahill"
         }
       ],
@@ -128,6 +148,22 @@
         {
           "name": "Python Crash Course",
           "author": "Eric Matthes"
+        },
+        {
+          "name": "How to Travel the World on $50 a Day",
+          "author": "Matthew Kepnes"
+        },
+        {
+          "name": "The Ultimate Hitchhiker's Guide to the Galaxy",
+          "author": "Douglas Adams"
+        },
+        {
+          "name": "Modern Monopolies",
+          "author": "Alex Moazed & Nicholas Johnson"
+        },
+        {
+          "name": "The Hunger Games (Books 0-4)",
+          "author": "Suzanne Collins"
         }
       ]
     },
