--- a/config/config_template.json
+++ b/config/config_template.json
@@ -17,7 +17,9 @@
         "highlightDark": "",
         "lightTone": "",
         "darkTone": "",
-        "errorColour": ""
+        "errorColour": "",
+        "bodyLinkColour": "",
+        "bodyLinkVisitedColour": ""
     },
     "currentlyReading": {
         "name": "",
