Removed the db_rows return type from api routes and simplified tag routes

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=test
-DATABASE_URL=postgres://postgres:test@localhost:5432/personalsite
+DATABASE_URI=postgres://postgres:test@localhost:5432/personalsite
 ADMIN_PASSWORD=test
-URL=localhost:5173
+CLIENT_DOMAIN=localhost:5173
