Fixed earlier change to env vars

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=test
-DATABASE_URI=postgres://postgres:test@localhost:5432/personalsite
+DATABASE_URL=postgres://postgres:test@localhost:5432/personalsite
 ADMIN_PASSWORD=test
 CLIENT_DOMAIN=localhost:5173
