--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
   "productionClientUrl": "kyledenief.me",
   "productionServerUrl": "https://api.kyledenief.me",
   "metaData": {
-    "description": "My personal site where I post my projects and blog",
+    "description": "My little corner of the internet",
     "analytics": {
       "dataDomain": "kyledenief.me",
       "analyticsSrc": "https://plausible.kyledenief.me/js/plausible.js"
@@ -21,18 +21,18 @@
     "bodyLinkVisitedColour": "#c9e2aa"
   },
   "currentlyReading": {
-    "name": "Metropolis",
-    "author": "Ben Wilson",
-    "dateStarted": "Mar. 28th, 2024"
+    "name": "Perilous Bounty",
+    "author": "Tom Philpott",
+    "dateStarted": "Nov. 27th, 2024"
   },
   "pages": {
     "home": {
-      "description": "Hi I'm Kyle Denief a university student and self taught programmer. Check out my latest project or blog if that interests you and have a good day!",
-      "mainParagraph": "I am a full-stack web developer with a strong foundation in front-end and back-end development, skilled in Python, TypeScript, and Rust. Self-taught and driven by a passion for computers and technology, I am continually improving my skills. I am currently enrolled in a computer science degree program at Memorial University of Newfoundland, where I aim to hone my abilities."
+      "description": "My little corner of the internet",
+      "mainParagraph": "Welcome to my little corner of the internet! I'm a university student who likes to make cool stuff. In particular I like to make cool stuff on my computer. I'm pretty good at Python and Javascript and I also know a few other languages. Take a look around the site and maybe let me know what you think, hopefully you find something interesting. Anyways so long, and thanks for visiting!"
     },
     "connect": {
-      "description": "Hi I'm Kyle Denief if you want to chat the best way to contact me is email!",
-      "mainParagraph": "Hi! Thanks for your interest in connecting with me. I am open to communication for any reason, and I welcome the opportunity to have a conversation. You can reach me on LinkedIn, Twitter, or GitHub, but for the quickest response, please email me at,",
+      "description": "Basically just my email",
+      "mainParagraph": "Wana do something crazy? Just ask, I'll probably say yes. Or, if you just feel like saying hi, that’s cool too. The best way to reach me is via email, which is listed below.",
       "email": "ky42@protonmail.com",
       "links": [
         {
@@ -50,9 +50,9 @@
       ]
     },
     "about": {
-      "description": "Hi I'm Kyle Denief I'm a university student at Memorial University of Newfoundland and I'm a programmer!",
-      "mainParagraph": "As a first-year computer science student at Memorial University of Newfoundland, I am highly motivated to learn and excel in the field of technology. In addition to my coursework, I have self-taught myself a range of programming languages and technologies, including Python, TypeScript, SQL, Docker, Git, Rust, and Linux. I have also gained experience with popular web development frameworks such as React, Flask, and Actix Web. My passion for computers and technology has driven me to continually improve my skills and knowledge. I am proud to have had numerous academic achievements, including winning high school subject awards, being on the honor roll, and receiving a scholarship from the James R. Hoffa Memorial Scholarship Fund. Outside of my studies, I enjoy reading, sports, and fishing. I have played a variety of sports throughout my life, including hockey, baseball, and basketball. I am excited to see where my studies and self-learning will take me in the future.",
-      "toRead": [
+      "description": "A little about me.",
+      "mainParagraph": "I'm currently attending Memorial University of Newfoundland majoring in Computer Science. The main reason I chose Computer Science is because I just like making cool things. I've always been interested in programming and using computers to make things so it seemed like a natural next step. The first time I tried programming was in grade 6 but I really learned how it all works in grade 9. Ever since I've been learning more and making random stuff. Other than programming I got a few hobbies like hiking, reading, and a few sports. I also play a few games, usually RTS games or shooters.",
+      "futureReads": [
         {
           "name": "Lost and Founder",
           "author": "Rand Fishkin"
@@ -70,19 +70,31 @@
           "author": "Jordan Ellenberg"
         },
         {
-          "name": "Perilous Bounty",
-          "author": "Tom Philpott"
-        },
-        {
           "name": "Structures",
           "author": "J. E. Gordon"
         },
         {
           "name": "Blackwater",
           "author": "Jeremy Scahill"
+        },
+        {
+          "name": "The Adventures of Tom Sawyer",
+          "author": "Mark Twain"
+        },
+        {
+          "name": "Moby Dick",
+          "author": "Herman Melville"
+        },
+        {
+          "name": "Moon Road",
+          "author": "Sarah Leipciger"
         }
       ],
       "finishedReading": [
+        {
+          "name": "Metropolis",
+          "author": "Ben Wilson"
+        },
         {
           "name": "Good Economics for Hard Times",
           "author": "Abhijit Banerjee & Esther Duflo"
@@ -90,10 +102,6 @@
         {
           "name": "Red Rising",
           "author": "Pierce Brown"
-        },
-        {
-          "name": "How To Win Friends & Influence People",
-          "author": "Dale Carnegie"
         },
         {
           "name": "Animal Farm",
@@ -112,18 +120,6 @@
           "author": "James Clear"
         },
         {
-          "name": "The Wealthy Barber",
-          "author": "David Chilton"
-        },
-        {
-          "name": "What Color is Your Parachute?",
-          "author": "Richard Bolles"
-        },
-        {
-          "name": "Everyday Hockey Heroes",
-          "author": "Bob McKenzie & Jim Lang"
-        },
-        {
           "name": "Splinter of the Mind's Eye",
           "author": "Alan Dean Foster"
         },
@@ -140,15 +136,7 @@
           "author": "Khaled Hosseini"
         },
         {
-          "name": "Ready Player Two",
-          "author": "Ernest Cline"
-        },
-        {
           "name": "Ready Player One",
-          "author": "Ernest Cline"
-        },
-        {
-          "name": "Armada",
           "author": "Ernest Cline"
         },
         {
@@ -156,16 +144,8 @@
           "author": "Eric Matthes"
         },
         {
-          "name": "How to Travel the World on $50 a Day",
-          "author": "Matthew Kepnes"
-        },
-        {
           "name": "The Ultimate Hitchhiker's Guide to the Galaxy",
           "author": "Douglas Adams"
-        },
-        {
-          "name": "Modern Monopolies",
-          "author": "Alex Moazed & Nicholas Johnson"
         },
         {
           "name": "The Hunger Games (Books 0-4)",
@@ -174,11 +154,11 @@
       ]
     },
     "blogList": {
-      "description": "A list of the blogs I've created. Most are about my experiences programming but theres a little bit of everything!",
+      "description": "A list of my blogs",
       "contentPerPage": 8
     },
     "projectList": {
-      "description": "A list of my projects! Some are finished and some aren't"
+      "description": "A list of my projects"
     }
   }
 }
