--- a/config/config_template.json
+++ b/config/config_template.json
@@ -1,4 +1,3 @@
-
 {
     "name": "",
     "productionClientUrl": "",
@@ -6,7 +5,7 @@
     "metaData": {
         "description": "",
         "analytics": {
-            "dataDomain": "",
+            "websiteId": "",
             "analyticsSrc": ""
         }
     },
@@ -24,7 +23,7 @@
     "currentlyReading": {
         "name": "",
         "author": "",
-        "dateStarted": ""        
+        "dateStarted": ""
     },
     "pages": {
         "home": {
