--- a/.github/workflows/client-build.yaml
+++ b/.github/workflows/client-build.yaml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/personal-site-client
+          images: ${{ secrets.DOCKER_USERNAME }}/personal-site-client
           tags: type=sha
         
       - name: Set up Docker Buildx
@@ -32,7 +32,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker images
@@ -41,6 +41,6 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta.outputs.tags }}
-            ${{ vars.DOCKER_USERNAME }}/personal-site-client:latest
+            ${{ secrets.DOCKER_USERNAME }}/personal-site-client:latest
           annotations: ${{ steps.meta.outputs.annotations }}
           file: ./client/Dockerfile
