--- a/.github/workflows/server-build.yaml
+++ b/.github/workflows/server-build.yaml
@@ -25,7 +25,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/personal-site-server
+          images: ${{ secrets.DOCKER_USERNAME }}/personal-site-server
           tags: type=sha
         
       - name: Set up Docker Buildx
@@ -34,7 +34,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker images
@@ -43,5 +43,5 @@ jobs:
           push: true
           tags: |
             ${{ steps.meta.outputs.tags }}
-            ${{ vars.DOCKER_USERNAME }}/personal-site-server:latest
+            ${{ secrets.DOCKER_USERNAME }}/personal-site-server:latest
           annotations: ${{ steps.meta.outputs.annotations }}
