--- a/.github/workflows/server-build.yaml
+++ b/.github/workflows/server-build.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v6
         with:
+          context: ./server
           push: true
           tags: |
             ${{ steps.meta.outputs.tags }}
